--- a/IISINV.yml
+++ b/IISINV.yml
@@ -5,5 +5,5 @@
 ansible_connection=winrm
 ansible_user=WinLabAAP
 ansible_port=5985
-ansible_password=Log123log!
+ansible_password=
 ansible_winrm_server_cert_validation=ignore
